<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imgCurve"
            android:layout_width="match_parent"
            android:layout_height="@dimen/img_curve_height"
            android:scaleType="fitXY"
            android:src="@drawable/ic_round_background" />

        <ImageView
            android:id="@+id/imgMenu"
            android:layout_width="@dimen/icon_menu_size"
            android:layout_height="@dimen/icon_menu_size"
            android:layout_margin="@dimen/margin_padding_small"
            android:clickable="true"
            android:focusable="true"
            android:padding="@dimen/margin_padding_small"
            android:src="@drawable/menu" />

        <!--User information-->
        <RelativeLayout
            android:id="@+id/rlAvatar"
            android:layout_width="@dimen/icon_avatar_size"
            android:layout_height="@dimen/icon_avatar_size"
            android:layout_below="@+id/imgMenu"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="@dimen/margin_padding_normal"
            android:background="@drawable/bg_avatar">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="MJ"
                android:textColor="@color/white"
                android:textSize="32dp" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imgMenu"
            android:layout_centerHorizontal="true"
            android:orientation="vertical">

            <TextView
                style="@style/TextStyle.Title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="Julie Richards" />

            <TextView
                style="@style/TextStyle.Title.Sub"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/at_sign"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imgCurve"
            android:layout_marginEnd="@dimen/margin_padding_normal"
            android:layout_marginStart="@dimen/margin_padding_normal"
            android:orientation="vertical"
            android:paddingTop="@dimen/margin_padding_large">

            <!--Layout phone number-->
            <LinearLayout
                android:id="@+id/llPhoneNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="@dimen/icon_edit_text_size"
                        android:layout_height="@dimen/icon_edit_text_size"
                        android:src="@drawable/ic_phone"
                        android:tint="@color/black" />


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <android.support.design.widget.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/hint_phone_number"
                            android:paddingBottom="@dimen/margin_padding_very_small"
                            android:paddingStart="@dimen/margin_padding_normal"
                            app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout.Profile">

                            <android.support.design.widget.TextInputEditText
                                android:id="@+id/editPhone"
                                style="@style/TextAppearence.App.TextInputEditText.Profile"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:gravity="center|start|bottom"
                                android:imeOptions="actionNext"
                                android:inputType="phone|textNoSuggestions"
                                android:paddingTop="@dimen/margin_padding_very_small" />

                        </android.support.design.widget.TextInputLayout>

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="0.5dp"
                            android:layout_marginStart="@dimen/margin_padding_normal"
                            android:layout_marginTop="@dimen/margin_padding_small"
                            android:background="@android:color/darker_gray" />
                    </LinearLayout>
                </LinearLayout>

            </LinearLayout>

            <!--Layout address-->
            <LinearLayout
                android:id="@+id/llAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_padding_normal"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="@dimen/icon_edit_text_size"
                        android:layout_height="@dimen/icon_edit_text_size"
                        android:src="@drawable/ic_addressbook"
                        android:tint="@color/black" />


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <android.support.design.widget.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/hint_address"
                            android:paddingBottom="@dimen/margin_padding_very_small"
                            android:paddingStart="@dimen/margin_padding_normal"
                            app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout.Profile">

                            <android.support.design.widget.TextInputEditText
                                android:id="@+id/editAddress"
                                style="@style/TextAppearence.App.TextInputEditText.Profile"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:gravity="center|start|bottom"
                                android:imeOptions="actionNext"
                                android:inputType="text|textNoSuggestions"
                                android:paddingTop="@dimen/margin_padding_very_small" />

                        </android.support.design.widget.TextInputLayout>

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="0.5dp"
                            android:layout_marginStart="@dimen/margin_padding_normal"
                            android:layout_marginTop="@dimen/margin_padding_small"
                            android:background="@android:color/darker_gray" />
                    </LinearLayout>
                </LinearLayout>

            </LinearLayout>

            <!--Layout VIP due-->
            <LinearLayout
                android:id="@+id/llVipDue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_padding_normal"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="@dimen/icon_edit_text_size"
                        android:layout_height="@dimen/icon_edit_text_size"
                        android:src="@drawable/ic_infovip"
                        android:tint="@color/black" />


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <android.support.design.widget.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/hint_vip_due_day"
                            android:paddingBottom="@dimen/margin_padding_very_small"
                            android:paddingStart="@dimen/margin_padding_normal"
                            app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout.Profile">

                            <android.support.design.widget.TextInputEditText
                                android:id="@+id/editVipDue"
                                style="@style/TextAppearence.App.TextInputEditText.Profile"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:gravity="center|start|bottom"
                                android:imeOptions="actionNext"
                                android:inputType="date|textNoSuggestions"
                                android:paddingTop="@dimen/margin_padding_very_small" />

                        </android.support.design.widget.TextInputLayout>

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="0.5dp"
                            android:layout_marginStart="@dimen/margin_padding_normal"
                            android:layout_marginTop="@dimen/margin_padding_small"
                            android:background="@android:color/darker_gray" />
                    </LinearLayout>
                </LinearLayout>

            </LinearLayout>

            <!--Action buttons-->
            <Button
                android:id="@+id/btnBuyVip"
                style="@style/Button.Primary"
                android:layout_marginTop="40dp"
                android:text="@string/buy_vip" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginBottom="@dimen/margin_padding_small"
                android:layout_marginStart="@dimen/horizontal_line_margin_start"
                android:layout_marginTop="@dimen/margin_padding_small"
                android:background="@android:color/darker_gray" />

            <Button
                android:id="@+id/btnSave"
                style="@style/Button.Primary"
                android:layout_marginBottom="10dp"
                android:text="@string/save" />
        </LinearLayout>
    </RelativeLayout>


</ScrollView>